<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".LayoutExercise">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/LinearLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/LinearLayoutStoriesMain"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/LinearLayoutStories"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/LinearLayoutP1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/tzuyuImg"
                                android:layout_width="134dp"
                                android:layout_height="134dp"
                                app:srcCompat="@drawable/tzuyuic" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/t"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView19"
                                android:layout_width="134dp"
                                android:layout_height="134dp"
                                app:srcCompat="@drawable/dahyunic" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/d"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView20"
                                android:layout_width="134dp"
                                android:layout_height="134dp"
                                app:srcCompat="@drawable/joanaic" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/jo"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView22"
                                android:layout_width="134dp"
                                android:layout_height="134dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/jannahic" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/l"
                                android:textAlignment="center" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView23"
                                android:layout_width="134dp"
                                android:layout_height="134dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/gaaic" />

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/g"
                                android:textAlignment="center" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="61dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView34"
                                    android:layout_width="48dp"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_vertical"
                                    app:srcCompat="@drawable/tzuyuic" />

                                <TextView
                                    android:id="@+id/textView11"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    android:text="@string/t" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="427dp"
                                    android:layout_height="453dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/tzuyupost" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="61dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView34"
                                    android:layout_width="48dp"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_vertical"
                                    app:srcCompat="@drawable/dahyunic" />

                                <TextView
                                    android:id="@+id/textView11"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    android:text="@string/d" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="427dp"
                                    android:layout_height="431dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/dahyunpost" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="61dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView34"
                                    android:layout_width="48dp"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_vertical"
                                    app:srcCompat="@drawable/joanaic" />

                                <TextView
                                    android:id="@+id/textView11"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    android:text="@string/jo" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView2"
                                    android:layout_width="427dp"
                                    android:layout_height="482dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="1"
                                    app:srcCompat="@drawable/joannapost" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>